src/objects/Maintenance_Renewal_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Safe_ID__c</fullName>
        <label>Account Safe ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date_Finance__c</fullName>
        <label>Close Date (Finance)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Churn_Risk_Last_Updated__c</fullName>
        <label>Customer Churn Risk Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Churn_Risk_Updated_Date__c</fullName>
        <label>Customer Churn Risk Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Churn_Risk__c</fullName>
        <label>Customer Churn Risk</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Region__c</fullName>
        <label>Customer Experience Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_LTV_Tier__c</fullName>
        <label>Customer LTV Tier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highest_Stage_Reached__c</fullName>
        <label>Highest Stage Reached</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Budget_M__c</fullName>
        <label>IT Budget ($M)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Deal_Amount__c</fullName>
        <label>Max Deal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Safe_ID__c</fullName>
        <label>Opportunity Safe ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_new_segment__c</fullName>
        <label>Ops new segment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Customer_Churn_Risk__c</fullName>
        <label>Prior Customer Churn Risk</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Forecast_Amount__c</fullName>
        <label>Renewal Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Team_Group_Buckets__c</fullName>
        <label>Territory Owner Team (Group Buckets)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Team__c</fullName>
        <label>Territory Owner Team</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <label>Territory Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undiscounted_Renewal_Amount__c</fullName>
        <label>Undiscounted Renewal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Maintenance Renewal Snapshot</label>
    <nameField>
        <label>Maintenance Renewal Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Renewal Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>